# blog_code

polars-vs-pandas/: README.md  pyproject.toml
polars-vs-pandas/data/: dataset.csv  dataset_renamed.csv  dataset_renamed_polars.csv
polars-vs-pandas/python/: 01-pandas.py  01-polars.py  02-pandas.py  02-polars.py  03-pandas.py  03-polars.py  04-pandas.py  04-polars.py
